# cb-webscraper

./: _checkin.sh  crawler.py  fc-app.py  load-epm-html.py  pyproject.toml  setup.sh
web-crawler/: crawler.py  load-html.py
webscrapers/playwright/: playwright.py
webscrapers/scrapy/: setup.sh
webscrapers/scrapy/scraper/: ccloud-ConjurCloud.html  ccloud-_TopNav.html
webscrapers/scrapy/scraper/scraper/: settings.py
webscrapers/scrapy/scraper/scraper/spiders/: cclouddoc.py
webscrapers/selenium/: README.md
