[project]
name = "cb-webscraper"
version = "0.1.0"
description = ""
authors = [
    {name = "jody"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.2.3,<3.0.0)",
    "firecrawl (>=2.5.3,<3.0.0)",
    "firecrawl-py (>=2.5.3,<3.0.0)",
    "selenium (>=4.31.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
